Refactor hash and string handlers to use `RedisValueContainer`
Updated hash and string handlers to use `RedisValueContainer` for better type safety and code clarity. This refactor replaces manual type checks with a utility method `checkRedisValueKind`, simplifying the logic for handlers and ensuring consistent type validation. This also includes changes to handle the `ttl` field as a primitive `long` instead of `Long` in `StringValue` and `HashFieldValue` classes.